--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_USERNAME="abcd1617147@gmail.com"
+DB_USERNAME="root"
 DB_PASSWORD="Ftoh101926!"
 DB_HOST="rds-mysql-server.cqovqwmfzsqp.ap-northeast-3.rds.amazonaws.com"
 DB_DATABASE="rds-mysql-server"
